# ocaml_starter

./: Makefile  README.md  dune  dune-project  ocaml_starter.opam
app/: dune  main.ml
src/: dune  lib.ml  lib.mli
test/: dune  test_ocaml_starter.ml
